# zero2prod

./: Cargo.toml  Dockerfile  README.md  configuration.yaml  spec.yml  sqlx-data.json
.github/workflows/: general.yml
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20220503183706_add_status_to_subscriptions.sql  20220503192135_make_subscription_status_not_null.sql  20220503192902_create_subscription_tokens_table.sql  20220504010350_add_token_valid_column.sql  20220504013403_make_token_valid_not_null.sql  20220510014331_create_users_table.sql  20220510020236_rename_password_column.sql  20220511001521_seed_user.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  email_client.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs
src/authentication/: middleware.rs  mod.rs  password.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs  subscription_token.rs
src/routes/: mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs  mod.rs
src/routes/admin/newsletter/: get.rs  post.rs
src/routes/admin/password/: get.rs  mod.rs  post.rs
src/routes/home/: mod.rs
src/routes/home/login/: get.rs  login.html  post.rs
src/routes/login/: get.rs  mod.rs  post.rs
tests/: health_check.rs
tests/api/: change_password.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
