[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
name = "zero2prod"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.0.1"
chrono = "0.4.19"
config = "0.13.1"
linkify = "0.8.1"
rand = { version = "0.8", features = ["std_rng"] }
reqwest = { version = "0.11.10", features = ["json", "rustls-tls"], default-features = false }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.136", features = ["derive"] }
serde-aux = "3.0.1"
sqlx = { version = "0.5.13", features = [ "runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline" ], default-features = false }
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.34", features = ["log"] }
tracing-actix-web = "0.5.1"
tracing-bunyan-formatter = "0.3.2"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.11", features = ["registry", "env-filter"] }
unicode-segmentation = "1.9.0"
uuid = { version = "0.8.1", features = ["v4"] }
validator = "0.14.0"

[dev-dependencies]
claim = "0.5.0"
# Stuck at <2.4 due to quickcheck/rand compatibility
fake = "~2.3"
once_cell = "1.10.0"
# Stuck at 0.9 due to lack of `rand::RngCore` impl on `quickcheck::Gen`
quickcheck = "0.9"
quickcheck_macros = "0.9"
serde_json = "1.0.79"
tokio = { version = "1.18.0", features = ["rt", "macros"] }
wiremock = "0.5.13"

[features]
